[metadata]
name = mkdocs_linkcheck
version = 1.0.0
author = Byrne Reese
author_email = byrne@majordojo.com
url = https://github.com/byrnereese/mkdocs-linkchecker
description = Check links for Mkdocs-based sites, as well as any markdown-based website
keywords =
  markdown
  mkdocs
  jekyll
  hugo
classifiers =
  Development Status :: 5 - Production/Stable
  Environment :: Console
  Framework :: AsyncIO
  Intended Audience :: Developers
  Operating System :: OS Independent
  Programming Language :: Python :: 3
  Programming Language :: Python :: Implementation :: CPython
  Topic :: Internet :: WWW/HTTP :: Site Management :: Link Checking
license_files =
  LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.7
include_package_data = True
packages = find:
install_requires =
  aiohttp >= 3.3
package_dir=
    =src

[options.packages.find]
where=src

[options.extras_require]
tests =
  pytest
lint =
  flake8
  flake8-bugbear
  flake8-builtins
  flake8-blind-except
  mypy
requests =
  requests

[options.entry_points]
console_scripts =
  mkdocs-linkcheck = mkdocs_linkcheck.__main__:main
