[metadata]
name = mkdocs_codecheck
version = 0.9.0
author = Byrne Reese
author_email = byrne@majordojo.com
url = https://github.com/byrnereese/mkdocs-codechecker
description = Traverses a directory tree looking for code samples, then attempts to validate each code sample found.
keywords =
  code
  qa
  markdown
  mkdocs
classifiers =
  Development Status :: 5 - Production/Stable
  Environment :: Console
  Framework :: AsyncIO
  Intended Audience :: Developers
  Operating System :: OS Independent
  Programming Language :: Python :: 3
  Programming Language :: Python :: Implementation :: CPython
  Topic :: Internet :: WWW/HTTP :: Site Management :: Link Checking
license_files =
  LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.7
include_package_data = True
packages = find:
#install_requires =
#  aiohttp >= 3.3
package_dir=
    =src

[options.packages.find]
where=src

[options.extras_require]
tests =
  pytest
lint =
  flake8
  flake8-bugbear
  flake8-builtins
  flake8-blind-except
  mypy
requests =
  requests

[options.entry_points]
console_scripts =
  mkdocs-codecheck = mkdocs_codecheck.__main__:main
